--- a/website/bibtex/dondrup2015tracking.bib
+++ b/website/bibtex/dondrup2015tracking.bib
@@ -2,6 +2,6 @@
   title={Real-time multisensor people tracking for human-robot spatial interaction},
   author={Dondrup, Christian and Bellotto, Nicola and Jovan, Ferdian and Hanheide, Marc},
   publisher={ICRA/IEEE},
-  booktitle={Workshop on Machine Learning for Social Robotics at Internaction Conference on Robotics and Automation (ICRA)},
+  booktitle={Workshop on Machine Learning for Social Robotics at Interaction Conference on Robotics and Automation (ICRA)},
   year={2015}
 }
